@@ -1,2 +1,2 @@
 @echo off
-java -jar server.jar
+java %JAVA_OPTS% --enable-native-access=ALL-UNNAMED -jar server.jar
